# CritiqueDriveVLM

./: .gitignore  LICENSE  README.md  pyproject.toml
evaluation/: README.md  evaluate.py  token_count.py
inference/: README.md  infer_latency.py  infer_student.py  infer_teacher.py
stage1_verifier/: README.md
stage1_verifier/configs/: dataset_info_snippet.json  verifier_sft.yaml  warmup_sft.yaml
stage1_verifier/data_construction/: 1_build_positive_data.py  1b_build_coach_data.py  2_gen_hard_negatives.py  3_score_negatives.py  3b_filter_perfect_samples.py  4_meta_verify.py  4b_final_adjudication.py  4c_filter_valid_positives.py  5_build_verifier_dataset.py  README.md
stage1_verifier/preprocess/: stitch_multiview.py
stage2_rl/: README.md  merge_lora.sh  run_grpo.sh  serve_verifier.sh
stage2_rl/interaction/: interaction.yaml  reflexion_interaction.py
stage2_rl/reward/: drivelmm_reward.py  verifier_client.py
stage3_distill/: README.md  ds_config_zero2.json  extract_teacher_hidden_states.py  train_distill.py
