[project]
name = "critiquedrivevlm"
version = "0.1.0"
description = "CritiqueDriveVLM: From Verifier-Guided Reinforcement Learning to Latent Thought Distillation for Autonomous Driving (ECCV 2026)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Zhaohong Liu" },
    { name = "Hao Ye" },
    { name = "Xianlin Zhang" },
    { name = "Mengshi Qi" },
]

dependencies = [
    "torch>=2.6",
    "transformers>=4.57",        # Qwen3-VL support
    "accelerate>=1.0",
    "peft>=0.13",
    "deepspeed>=0.15",           # Stage-3 distillation (ZeRO-2)
    "vllm>=0.11",                # rollout / verifier serving / inference
    "qwen-vl-utils",
    "pillow",
    "opencv-python",
    "matplotlib",
    "numpy",
    "pandas",
    "tqdm",
    "aiohttp",                   # async verifier client
    "requests",
    "openai",                    # GPT-4o judge for evaluation
    "openpyxl",                  # meta-verifier dispute export
    "swanlab",                   # experiment logging (optional)
]

[project.optional-dependencies]
# Packages that need an already-installed torch at build time.
# Install with:  uv sync --extra build
build = [
    "flash-attn>=2.7",
]

[project.urls]
Homepage = "https://github.com/MICLAB-BUPT/CritiqueDriveVLM"
Paper = "https://arxiv.org/abs/2607.04179"

# NOTE: Stage-2 reinforcement learning additionally requires `verl`, installed
# separately from source:  https://github.com/volcengine/verl

[tool.uv]
# flash-attn must be built against the installed torch.
no-build-isolation-package = ["flash-attn"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stage1_verifier", "stage2_rl", "stage3_distill", "inference", "evaluation"]
